--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Facts</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Atividade Filantrópica</h2>
+          <p>Busco dedicar meu tempo ao trabalho voluntário na Instituição beneficente Café e Sorrisos, em São Paulo. Este grupo de amigos tem como missão distribuir café da manhã e afeto às pessoas em situação de rua. Acredito que a tecnologia pode transformar vidas, mas é o compromisso com a humanidade que verdadeiramente define meu percurso profissional e pessoal. Venha Conhecer Nosso Projeto!  </p>
         </div>
 
         <div class="row no-gutters">
