--- a/index.html
+++ b/index.html
@@ -129,33 +129,33 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Atividade Filantrópica</h2>
-          <p>Busco dedicar meu tempo ao trabalho voluntário na Instituição beneficente Café e Sorrisos, em São Paulo. Este grupo de amigos tem como missão distribuir café da manhã e afeto às pessoas em situação de rua. Acredito que a tecnologia pode transformar vidas, mas é o compromisso com a humanidade que verdadeiramente define meu percurso profissional e pessoal. Venha Conhecer Nosso Projeto!  </p>
+          <h2>Estudos e Compromisso Social</h2>
+          <p>Busco dedicar meu tempo a estudos relacionados ao TI, envolvendo desenvolvimento Front-End e estudos em computação em nuvem. E também faço parte da familía Café e Sorrisos, em São Paulo. Este grupo de amigos tem como missão distribuir café da manhã e afeto às pessoas em situação de rua. Acredito que a tecnologia pode transformar vidas, mas é o compromisso com a humanidade que verdadeiramente define meu percurso profissional e pessoal.</p>
         </div>
 
         <div class="row no-gutters">
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
-              <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
+              <i class="bi bi-award-fill"></i>
+              <span data-purecounter-start="0" data-purecounter-end="420" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Certificados</strong> Google Cloud, Programador Front-End</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+              <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Projetos</strong> Amazon, Paulina, Itaú Conceição</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+              <span data-purecounter-start="0" data-purecounter-end="3420" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Horas de Estudo</strong> Práticas e Téoricas</p>
             </div>
           </div>
 
@@ -163,7 +163,7 @@
             <div class="count-box">
               <i class="bi bi-people"></i>
               <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+              <p><strong>Treinamentos</strong> Relacionados ao Sistema Metasys</p>
             </div>
           </div>
 
